# postgresql-config

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.upgrade.project  fourmolu.yaml  postgresql-config.cabal
examples/: Main.hs  pgconfig-examples.cabal  pgconfig.yml
src/Database/PostgreSQL/: Config.hs
